<resources>
    <string name="app_name">prueba</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="trivia1">“haber + sustantivo” es utilizada para expresar la existencia de algo</string>

    <string name="trivia2"></string>


    <string name="ps"><![CDATA[<b><font color=#FF0000>hola</font></b>]]>con Will Brandford con sus problemas mentales y estreses que se ha ganado
    con el trabajo duro.</string>


    <string name="historia">Conoce a Will Brandford una persona con gran espiritu y escritor.

        identifica los errores ortograficos en esta novela interactiva,
        este modo aun no esta completado
    </string>

    <string name="blitz">
        Identifica rapidamente los errores ortograficos, con un limite de tiempo.
    </string>

    <string name="bad"> Se lo que se siente perder pero nunca sabre lo que se siente rendirse  </string>
    <string name="neutral"> No importa a que obstaculo te enfrentes lucha por seguir adelante </string>
    <string name="good">No te sacrifiques por los sueños de otros muere por el tuyo  </string>
    <string name="gameover">Aprende a apreciar lo que tienes antes de que el tiempo te enseñe a apreciar lo que tuviste...
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Primeracolm">
       Se me  <![CDATA[<b><font color=#FF0000>callo</font></b>]]> la mujer de la vida

    </string>

    <string name="n3_1">
        En la vida hay bastantes retos que cursan
    </string>

    <string name="n3_2">
        En la vida hay bastantes retos que hay que cruzar
    </string>

    <string name="frase1">
        En mi cuarto  <![CDATA[<b><font color=#FF0000>abian</font></b>]]> ciertas voces en mi mente pero yo no creo que puedo
    </string>
    <string name="frase2">
        Todos viven en mi mente y qiero que me la pel.........
    </string>
    <string name="frase2_1">
         Todos viven en mi mente y kiero que me la pel.........
    </string>
    <string name="frase2_2">
         Todos viven en mi mente y quieronto que me la pel.........
    </string>
    <string name="frase2_3">
        Todos viven en mi mente y quiero que me la pel.........
    </string>
    <string name="n5">
    Esta es una adivinanza, una adivinanza caprichosa, Adivina tú, despitasdo juglar,
        los versos que tienes que adivinar:
    </string>
    <string name="n5_1">
        ¿cómo se llama la casa de cuatro recáramas enrajada por blancos garrotes en la que viven dos señores:
        unom sale y otro viene?, piensas mucho y no lo resuelves, respira un poco y mejor siente te aclaro con estos versos:
        es el reloj mecanico el enamorado ciego el corredor incansable y vidrio mas fragil...

    </string>


    <string name="Parf1">
       Vientos fuerte pegan a la espalda de Slayer, sus brazos ya temblando  de cansancio,
        sentía que se podía soltar en cualquier momento, pero la cima que veía lo motivava a continuar.
   </string>


    <!--story mode-->

    <string name="parrafo1Cap1">
Un viento helado golpeo a la espalda de Slayer. Sentía que se podía dejar caer en cualquier momento, pero al ver la cima tan cercas lo motivo a continuar.
    </string>
    <string name="parrafo2Cap1">
Primero subió su brazo y luego el otro, con los dos arrastro su cuerpo. Respiraba profundamente, no podía perder tiempo y se levanto rápidamente.
    </string>
    <string name="parrafo3Cap1">
En la cima había una niebla densa que cubría toda el área, Slayer empezó a caminar lentamente.
    </string>

    <string name="parrafo4Cap1">
Escuchaba ruidos extraños; como gruñido, seguido por gritos de agonía y risas.
"\n" -Nadie me dijo que esta montaña estaba maldita- rezongo Slayer.
    </string>

    <string name="parrafo5Cap1Decision">
        Seguía caminando la niebla empezó a cubrir todo su cuerpo; hasta que llego un
        punto que no podía ver sus brazos o piernas. Slayer se empezó a sentir extraño.
"\n"
¿Qué debería ser Slayer?
    </string>

    <string name="pregunta1Op1">
         Correr como loco
    </string>
    <string name="pregunta1Op2">
         Mantener la calma
    </string>
    <string name="pregunta1Op3">
        Sacar la espada y atacar como loco
    </string>

    <string name="resultadoOp3">
        Saco su espada y empieza a atacar como loco esperando que la niebla desaparecía. Pero no resulto.
        "\n"
¿Ahora que hará Slayer?

    </string>

    <string name="Ruta2">
        Slayer montuno la calma, miro hacia arriba y noto una luz. Empezó a caminar hacia el. La luz resulto ser un molino,
        que era la construcción más alta de un pueblo chico, que sorprendente no estaba cubierta de niebla.
    </string>

    <string name="Ruta2Parrafo6">
        Finalmente encontró la supuesta “ciudad de los cielos” la entrada había un arco
        que tenía unos símbolos extraños y debajo ella había una persona que le dio la bienvenida a Slayer.
    </string>
    <string name="Ruta2Dialogo1">
       Saludo viajero ¿espero que la niebla no haya espantado?
    </string>

    <string name="Ruta1">
Slayer empezó a tener pánico y corrió, no sabía si la niebla le estaba haciendo un efecto extraño a él,
        se hinco de rodilla y se agarró la cabeza.
"\n"
        - ¿Qué hago? -grito Slayer
    </string>

    <string name="pregunta2Op1">
       Mantener la Calma
    </string>
    <string name="pregunta2Op2">
	Tirar la gemas
    </string>
    <string name="pregunta2Op3">
	Continuar corriendo
    </string>


    <string name="ruta1Pregunta1">
        Slayer tomo un respiro y retrocede sus pasos en su camino noto un
    </string>
    <string name="ruta1Pregunta2">
     Slayer saco sus gemas, le grita a ellas. Culpándolas de todo el peligro, “no me importa salvar a esa maldita ciudad hipócrita, no me importa salvar la vida de ningún humano hasta este punto, todo se pueden ir al infierno, no me importa que piensen de mi yo sé que soy un fenómeno igual a ellos”.
"\n"
Slayer miro hacia arriba y vio una luz corrió hacia ella. Llego a la entrada muy alterado y respirando como loco.
    </string>
    <string name="ruta1pregunta3">
        Slayer continúa corriendo, hasta que accidentalmente cae al abismo. E aquí el guerrero que fracaso salvar a su ciudad.
    </string>

    <string name="ruta1resp2">
    Slayer saco sus gemas, le grita a ellas. Culpándolas de todo el peligro, “no me importa salvar a esa maldita ciudad hipócrita, no me importa salvar la vida de ningún humano hasta este punto, todo se pueden ir al infierno, no me importa que piensen de mi yo sé que soy un fenómeno igual a ellos”.
"\n"
Slayer miro hacia arriba y vio una luz corrió hacia ella. Llego a la entrada muy alterado y respirando como loco.
    </string>

    <string name="ruta1parrafo6">
        Una persona se le acerco a preguntarle algo- ¿Te encuentras bien?, creo que la niebla te hizo efecto.
    </string>


    <string name="ruta1pergunta1">
¿Qué es este lugar?
    </string>
    <string name="ruta1pregunta2">
¡Aléjate de mi maldito fenómeno!
    </string>

    <string name="rutal1respuesta2">
Calmado, estas espantado por la niebla, muchos viajeros también sufren de ese pánico, pero ahora estas en el pueblo.
    </string>
    <string name="rutal1respuesta2_1">
Venia por una gema, pero realice que es una pérdida de tiempo, porque arriesgo mi vida para salvar unas vidas ¡hipócritas!
    </string>

    <string name="ruta1parrafo7">
        ¿Dónde estoy? pregunto Slayer
    </string>
    <string name="ruta1parrafo7_1">
        Estas en la ciudad de los cielos, creo que la niebla te puso mucho en pánico, estas a salvo, respira profundamente.
    </string>
    <string name="ruta1parrafo7_2">
        “¿A que vienes aquí viajero lejano?”
    </string>
    <string name="ruta1parrafo7_3">
        Vengo por una gema, pero ya no me interesa de eso, todo este viaje solo fue estúpido.
    </string>
    <string name="ruta1parrafo7_4">
        Ya veo tienes la misma mentalidad como nosotros.
    </string>
    <string name="rutal1parrafo7_5">
        ¿A qué te refieres? Pregunta Slayer
    </string>
    <string name="ruta1parrafo8">
        Pensamos que los humanos, no piensan antes de hacer sus acciones, lo que resultaría a ellos culpándose a otros y tener peleas innecesarias, este pueblo de aquí solo existen aquellos que han dejado todo hacia atrás de su vida, donde no requieren de pensar de ser el mejor de todos o esconder su inseguridad como los demás, no quiero decir que nosotros somos mejores que ellos si no nosotros no escondemos la honestidad, es lo que pensamos, a diferencias de otros que solo se van a contradecirse o encontrar una manera para negar mi opinión y….
    </string>
    <string name="ruta1parrafoEND">
        La persona continuaba hablando, Slayer lentamente cierra sus ojos y cae al suelo…
    </string>


    <!--ruta3-->

    <string name="ruta2botonop1">
     ¿Por qué hay mucha niebla?
</string>

    <string name="ruta2botonop2">
¡vengo por la sexta gema!
    </string>
    <string name="ruta2parrafo7">
-No se en verdad, será por naturaleza, esa es la razón por que se llama aquí la “ciudad de los cielos” porque está cubierto de niebla- Respondió el residente.
    </string>
    <string name="ruta2parrafo7_1">
        Vengo por una gema en especial, tiene una figura diferente sabes-le pregunta Slayer.
    </string>
    <string name="ruta2parrafo7_2">
       ¿Te refieres a esta gema? - la persona saco de su bolso una gema; finalmente la sexta y última gema ahora poder salvar la ciudad pensó Slayer.
    </string>
    <string name="ruta2botonop3">
Tengo que partir a mi viaje, pero gracias.
</string>
    <string name="ruta2botonop4">
Puedo tomar un descanzo pequeño.

    </string>
    <string name="ruta2parrafo8">
   Ten-la persona le avienta la gema a su mano.
        "\n"
- ¿Es todo? No tengo que hacer de ningún favor extraño por ti, escalar una montana, trabajar por ti, tratar de matar a alguien, ¡nada! – pregunto Slayer.

    </string>
    <string name="ruta2parrafo9">
        Por supuesto que no, en este pueblo no necesitamos nada, mientras caminemos, veamos y nuestro cuerpo funcione bien, no hay necesidad de cosas elegantes. Las personas modernizadas se encierran en su propia fantasía, llenas de ansia por que no pueden tener esa cosa extra, que los hace sentir menos inseguros de sí mismo como un carro, televisión, ropa, solo para evadir la crítica.
    </string>
    <string name="ruta2parrafo10">
       La persona continuaba hablando sin sentido, pero para Slayer era tiempo de regresar a su ciudad no había tiempo por perder.
    </string>
    <string name="ruta2parrafo10_1">
    -“Bueno es tiempo de partir tengo que hacer algo importante”-le respondió Slayer

</string>
    <string name="ruta2parrafo10_2">
   -No deseas quedarte por un rato, por tu actitud siento que has sufrido por un largo viaje, con mucho estrés y días sin descanso.

    </string>
    <string name="ruta2parrafoEND">
    Lo siento pero tengo que salvar una ciudad- Slayer se despide y entra de nuevo a la niebla espesa, para salvar su ciudad.
</string>
    <string name="ruta2parrafo11">

    </string>
</resources>
