<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yonathan.proyecto.StoryMode.Capitulo1.Page2Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txtparrafo3"
        android:layout_width="254dp"
        android:layout_height="73dp"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginBottom="433dp"
        android:text="@string/parrafo5Cap1Decision"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="367dp"
        android:layout_height="266dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971">

        <Button
            android:id="@+id/btnopcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1Op1" />

        <Button
            android:id="@+id/btnopcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1Op2" />

        <Button
            android:id="@+id/btnopcion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1Op3" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
