<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yonathan.proyecto.StoryMode.Capitulo1.Ruta1Fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/opciones"
        android:layout_width="368dp"
        android:layout_height="154dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341">

        <Button
            android:id="@+id/btnruta1op1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2Op1" />

        <Button
            android:id="@+id/btnruta1Op2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2Op2" />

        <Button
            android:id="@+id/btnruta1op3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2Op3" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtparrafo"
        android:layout_width="222dp"
        android:layout_height="317dp"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/opciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="90dp" />

    <LinearLayout
        android:id="@+id/next"
        android:layout_width="80dp"
        android:layout_height="555dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/opciones2"
        android:layout_width="365dp"
        android:layout_height="107dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="204dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnruta1op5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruta1pregunta2"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="28dp" />

        <Button
            android:id="@+id/btnruta1op4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruta1pergunta1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="503dp" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/next2"
        android:layout_width="80dp"
        android:layout_height="555dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/opciones"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toEndOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
